fix: fix lastSearch layout not responsive

--- a/src/components/LastSearch/lastSearch.css
+++ b/src/components/LastSearch/lastSearch.css
@@ -2,16 +2,14 @@
     list-style: none;
 
     display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(5, minmax(170px, 1fr));
+    gap: 0.5rem;
+    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 
-    max-inline-size: 70%;
+    max-inline-size: 90%;
 }
 
 .user-list__item{
-    align-self: center;
     display: flex;
-    justify-content: space-between;
     background-color: var(--clr-primary-dark);
 }
 
